--- a/app/component/city-detail/city-detail.component.html
+++ b/app/component/city-detail/city-detail.component.html
@@ -4,7 +4,7 @@
             <h4 class="card-title">{{cityForecast?.city}}</h4>
             <p class="card-text">{{cityForecast?.country}}</p>
             <div class="row">
-                <div class="col-xs-4" *ngFor="let forecast of cityForecast?.forecast">
+                <div class="col-xs-12 col-md-4" *ngFor="let forecast of cityForecast?.forecast">
                     <div class="card">
                         <div class="card-block">
                             <div class="card-title">
